@@ -60,6 +60,7 @@ class Engraver(plugin.MainWindowPlugin):
         ac.engrave_custom.triggered.connect(self.engraveCustom)
         ac.engrave_abort.triggered.connect(self.engraveAbort)
         ac.engrave_autocompile.toggled.connect(self.engraveAutoCompileToggled)
+        ac.engrave_open_lilypond_datadir.triggered.connect(self.openLilyPondDatadir)
         ac.engrave_show_available_fonts.triggered.connect(self.showAvailableFonts)
         mainwindow.currentDocumentChanged.connect(self.updateActions)
         app.jobStarted.connect(self.updateActions)
@@ -260,6 +261,15 @@ class Engraver(plugin.MainWindowPlugin):
         from . import autocompile
         autocompile.AutoCompiler.instance(self.mainwindow()).setEnabled(enabled)
     
+    def openLilyPondDatadir(self):
+        """Menu action Open LilyPond Data Directory."""
+        from . import command
+        info = command.info(self.mainwindow().currentDocument())
+        datadir = info.datadir()
+        if datadir:
+            import helpers
+            helpers.openUrl(QUrl.fromLocalFile(datadir))
+    
     def showAvailableFonts(self):
         """Menu action Show Available Fonts."""
         from . import command
@@ -336,6 +346,7 @@ class Actions(actioncollection.ActionCollection):
         self.engrave_autocompile = QAction(parent)
         self.engrave_autocompile.setCheckable(True)
         self.engrave_show_available_fonts = QAction(parent)
+        self.engrave_open_lilypond_datadir = QAction(parent)
         
         self.engrave_preview.setShortcut(QKeySequence(Qt.CTRL + Qt.Key_M))
         self.engrave_publish.setShortcut(QKeySequence(Qt.CTRL + Qt.SHIFT + Qt.Key_P))
@@ -359,6 +370,7 @@ class Actions(actioncollection.ActionCollection):
         self.engrave_custom.setText(_("Engrave (&custom)..."))
         self.engrave_abort.setText(_("Abort Engraving &Job"))
         self.engrave_autocompile.setText(_("Automatic E&ngrave"))
+        self.engrave_open_lilypond_datadir.setText(_("Open LilyPond &Data Directory"))
         self.engrave_show_available_fonts.setText(_("Show Available &Fonts..."))
         
         
