@@ -274,6 +274,7 @@ def menu_lilypond(mainwindow):
     m.addSeparator()
     m.addMenu(menu_lilypond_generated_files(mainwindow))
     m.addSeparator()
+    m.addAction(ac.engrave_open_lilypond_datadir)
     m.addAction(ac.engrave_show_available_fonts)
     return m
 
